Added the div where the part about successful buying of tickets will appear

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -22,6 +22,7 @@
             <p>Showtime: <span id="showtime"></span></p>
             <p>Available Tickets: <span id="available-tickets"></span></p>
             <button id="buy-ticket">Buy Ticket</button>
+            <div id="message" style="display: none;">Ticket purchased successfully!</div>
         </div>
     </div>
     <script src="/workspace/index.js"></script>
